--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "gradeslist-mobile",
+    "name": "GradeIn",
     "slug": "gradeslist-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
