--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "htmlparser2": "^10.0.0",
+    "lottie-react-native": "^7.2.5",
     "luxon": "^3.7.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -55,7 +56,7 @@
     "react-native-html-parser": "^0.1.0",
     "react-native-html-to-text": "^0.0.5",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
